--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,13 @@ rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
+  - 2.0.0
 gemfile:
   - gemfiles/rails30.gemfile
   - gemfiles/rails31.gemfile
   - gemfiles/rails32.gemfile
+  - gemfiles/rails40.gemfile
+matrix:
+  include:
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails40.gemfile
