--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,18 @@ gemfile:
   - gemfiles/rails32.gemfile
   - gemfiles/rails40.gemfile
 matrix:
-  include:
-    - rvm: 2.0.0
+  exclude:
+    - rvm: 1.8.7
+      gemfile: gemfiles/rails32.gemfile
       gemfile: gemfiles/rails40.gemfile
+  exclude:
+    - rvm: 1.9.2
+      gemfile: gemfiles/rails30.gemfile
+      gemfile: gemfiles/rails40.gemfile
+  exclude:
+    - rvm: 1.9.3
+      gemfile: gemfiles/rails30.gemfile
+      gemfile: gemfiles/rails40.gemfile
+  exclude:
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails30.gemfile
