--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,21 @@ matrix:
   exclude:
     - rvm: 1.8.7
       gemfile: gemfiles/rails32.gemfile
+
+    - rvm: 1.8.7
       gemfile: gemfiles/rails40.gemfile
-  exclude:
+
     - rvm: 1.9.2
       gemfile: gemfiles/rails30.gemfile
+
+    - rvm: 1.9.2
       gemfile: gemfiles/rails40.gemfile
-  exclude:
+
     - rvm: 1.9.3
       gemfile: gemfiles/rails30.gemfile
+
+    - rvm: 1.9.3
       gemfile: gemfiles/rails40.gemfile
-  exclude:
+
     - rvm: 2.0.0
       gemfile: gemfiles/rails30.gemfile
